Migrate Junit4 to Junit5 (#2156)
* Migrate tests to junit5

Signed-off-by: Stanislav Knot <sknot@redhat.com>

* rebase

Signed-off-by: Stanislav Knot <sknot@redhat.com>

* fix async

Signed-off-by: Stanislav Knot <sknot@redhat.com>

* fix race condition

Signed-off-by: Stanislav Knot <sknot@redhat.com>

* fix data type

Signed-off-by: Stanislav Knot <sknot@redhat.com>

* rebase

Signed-off-by: Stanislav Knot <sknot@redhat.com>

* fix pfa test

Signed-off-by: Stanislav Knot <sknot@redhat.com>